# aar_admin

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  MYH_INFRASTRUCTURE_CHECKLIST.md  Portal_Integration_Standards.md  README.md  deploy_secondary.sh  deploy_secondary_full.sh  docker-compose.yml  gunicorn.conf.py  jasondemo2  jasondemo2_end  project_export.md  requirements.txt  specs.md
.claude/: launch.json
django/: Dockerfile  pyproject.toml  start-server.sh
django/app/: manage.py
django/app/aar_admin/: asgi.py  context_processors.py  settings.py  settings_dev.py  settings_local.py  settings_prod.py  urls.py  wsgi.py
django/app/aar_admin/common/: aar_api.py
django/app/plans/services/: api_client.py  plan_service.py
django/app/plans/static/css/: aar.css  (+1 more)
django/app/plans/templates/: header.html  layout.html
django/app/plans/templatetags/: aar_tags.py
django/app/plans/urls/: batch_urls.py  course_lists_urls.py  lookup_urls.py  plan_urls.py  role_urls.py
django/app/plans/views/: batch_views.py  course_lists_views.py  lookup_views.py  plan_views.py
fastapi/: Dockerfile  aar_admin.db  pyproject.toml  start-server.sh
fastapi/app/: cache.py  main.py
fastapi/app/configs/: config.py  config_local.py
fastapi/app/databases/: oracle_db.py  sqlite_db.py
fastapi/app/routers/: aar.py  audit_log.py  course_lists.py  courses.py  plans.py
fastapi/app/schemas/: audit.py  course.py  course_list.py  plan.py
fastapi/app/services/: seed_data.py
fastapi/app/utils/: security.py
fastapi/tests/: conftest.py  test_courses.py  test_oracle_db.py  validate_oracle.py
(+42 files in other folders)
