[project]
name = "aar-admin-web"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "Django==5.2.9",
    "httpx>=0.28.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.5.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"
