[project]
name = "aar-admin-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.120.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7",
    "uvicorn>=0.30.0",
    "fastapi-cache2[redis]>=0.2",
    "redis[hiredis]>=5.0",
]

[dependency-groups]
dev = ["pytest", "httpx"]
